# bilingual-extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
database/: README.md  schema.sql
docs/: DOCUMENTATION.md
notebooks/: bilingual_extractor_demo.ipynb
templates/: PR_TEMPLATE.md
term_extractor/: term_extractor.py
tests/: __init__.py  test_basic.py
